<resources>
    <string name="app_name">아장아장</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">홈</string>
    <string name="transaction">거래</string>
    <string name="community">커뮤니티</string>
    <string name="chat">채팅</string>
    <string name="mypage">마이페이지</string>
    <string name="common">%s</string>
    <!-- ALL -->
    <string name="count">총 %d 개</string>

    <string name="category">카테고리</string>

    <string name="baby">아기용품</string>
    <string name="for_mom">엄마용품</string>
    <string name="outdoor">외출용품</string>
    <string name="device">전자기기</string>
    <string name="sanitary">위생용품</string>
    <string name="clothes">아기의류</string>
    <string name="baby_goods">이유용품</string>
    <string name="bed">침구</string>
    <string name="food">식품</string>

    <string name="toy">장난감</string>
    <string name="tactile_play">촉감놀이</string>
    <string name="block">블록</string>
    <string name="sports">스포츠</string>
    <string name="ride">탈 것</string>
    <string name="book">도서</string>
    <string name="puzzle">보드게임/퍼즐</string>
    <string name="doll">인형</string>
    <string name="robot">로봇/피규어/인형</string>
    <string name="role_play">역할놀이</string>
    <string name="stationery">문구</string>
    <string name="music">음악</string>
    <string name="water_play">물놀이</string>
    <string name="operational_toy">작동 완구</string>




    <!-- HOME -->
    <string name="toy_library_title">장난감 도서관이 뭐야?</string>
    <string name="toy_library_contents">영유아 육아 지원 장난감 도서관\n알아보러 가기</string>
    <string name="recommend">%s님을 위한 추천 거래</string>
    <string name="recent_community">최근 커뮤니티 게시글</string>


    <!-- MyPage -->
    <string name="children">우리 아이</string>
    <string name="name">%s</string>
    <string name="like_list">찜 목록</string>
    <string name="recent">최근 본 거래</string>
    <string name="heart_count">%d</string>


    <!-- Setting -->
    <string name="app_option">앱 옵션</string>
    <string name="license">오픈소스 라이센스</string>
    <string name="push">푸시 동의</string>
    <string name="privacy">개인정보 처리 방침</string>
    <string name="logout">로그아웃</string>
    <string name="out">회원 탈퇴</string>
    <string name="app_version">앱 버전</string>
    <string name="setting">설정</string>
    <string name="version">버전 %s</string>

    <!-- it_kids -->
    <string name="kids_name">%s</string>
    <string name="birthday">%d.%d.%d 출생</string>

    <!-- recentTransaction -->
    <string name="recent_tran">최근 본 거래 %d개</string>

    <!-- like -->
    <string name="like_count">총 %d개</string>

    <!-- alarm -->
    <string name="alarm">알람</string>

    
    <!-- item -->
    <string name="status">상태</string>

    <!-- TRANSACTION DETAIL -->
    <string name="transaction_detail">거래 하기</string>
    <string name="to_chat">채팅하기</string>
    <string name="selling">판매중</string>
    <string name="requesting">요청중</string>
    <string name="sharing">나눔중</string>
    <string name="exchanging">교환중</string>
    <string name="price">%d 원</string>
    <string name="caution">❗️주의사항</string>

    <!-- TRANSACTION WRITE -->
    <string name="transaction_write">거래 글 작성</string>
    <string name="write">글 등록하기</string>
    <string name="upload_photo">사진 업로드</string>
    <string name="transaction_write_title">글 제목</string>
    <string name="transaction_write_contents">상품설명</string>
    <string name="transaction_write_contents_hint">상품에 대한 설명을 적어주세요! 자세할수록 좋아요!</string>
    <string name="transaction_write_caution">주의사항</string>
    <string name="transaction_write_caution_hint">게시글 내에 더 강조될 주의사항을 적어주세요!</string>
    <string name="transaction_write_transaction_type">거래 종류</string>
    <string name="sell">판매</string>
    <string name="request">요청</string>
    <string name="share">나눔</string>
    <string name="exchange">교환</string>
    <string name="transaction_write_sell_price">판매 가격</string>
    <string name="transaction_write_states">물품 상태</string>
    <string name="gender">성별</string>
    <string name="gender_boy">남아</string>
    <string name="gender_girl">여아</string>
    <string name="gender_public">공용</string>
    <string name="age_range">나이대</string>
    <string name="transaction_write_month">개월</string>
    <string name="transaction_write_age">나이</string>
    <string name="transaction_write_method">거래 희망 방식</string>
    <string name="direct">직거래</string>
    <string name="delivery">택배거래</string>
    <string name="both_method">모두</string>


    <!-- COMMUNITY -->
    <string name="comment_cnt">댓글 %d</string>

</resources>