<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="416dp"
            android:layout_height="463dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:id="@+id/btn_option"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_option"
                android:drawableRight="@drawable/ic_direction"
                android:gravity="start"
                android:text="@string/app_option"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_license"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_license"
                android:drawableRight="@drawable/ic_direction"
                android:gravity="start"
                android:text="@string/license"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_alaram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_bell"
                android:gravity="left"
                android:text="@string/alarm"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_version"
                android:gravity="left"
                android:text="@string/app_version"
                android:textColor="@color/black"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_privacy"
                android:drawableRight="@drawable/ic_direction"
                android:gravity="left"
                android:text="@string/privacy"
                android:textColor="@color/black"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_logout"
                android:drawableRight="@drawable/ic_direction"
                android:gravity="left"
                android:text="@string/logout"
                android:textColor="@color/black"
                tools:ignore="RtlHardcoded" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_out"
                android:drawableRight="@drawable/ic_direction"
                android:gravity="left"
                android:text="@string/out"
                android:textColor="@color/black" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginBottom="50dp"/>

        <ImageButton
            android:id="@+id/imageButton5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="195dp"
            android:background=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_photo"
            tools:ignore="SpeakableTextPresentCheck"
            android:elevation="50dp"/>

        <TextView
            android:id="@+id/tv_myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>