<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_option"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="108dp"
            android:layout_height="108dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@color/white"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile"
            app:srcCompat="@drawable/ic_information"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            app:layout_constraintStart_toEndOf="@+id/iv_profile"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton2"
            app:srcCompat="@drawable/ic_plus"
            android:background="@color/white"
            android:layout_marginEnd="10dp"
            tools:ignore="SpeakableTextPresentCheck"
            android:layout_marginTop="62dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_kidsList"
            android:layout_width="374dp"
            android:layout_height="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_kidsList"
            android:layout_marginStart="20dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/rv_kidsList"
            app:srcCompat="@drawable/ic_heart"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="22dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_heartList"
            android:layout_width="372dp"
            android:layout_height="126dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            android:orientation="horizontal"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recent"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_heartList"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recent"
            android:layout_width="369dp"
            android:layout_height="124dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/tv_heart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heart_count"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/rv_kidsList"
            android:layout_marginTop="20dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>